[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Rémi Carton <remi.carton@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
advent = "advent.cli:day"
new_day = "advent.cli:new_day"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
termcolor = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.1"
pyright = "^1.1.389"
ipython = "^8.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E741"]
